Add user input character limit

--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
 
     <footer>
         <h3>📝 규칙 📝</h3>
-        <div>1. 입력한 단어가 사전에 미등재시 게임 종료</div>
-        <div>2. 사용자 우승 시 게임 종료</div>        
+        <ol>
+            <li>입력한 단어가 사전에 미 등재 시 게임 종료</li>
+            <li>사용자 우승 시 게임 종료</li>
+        </ol>     
     </footer>
 
     <script src="dictionaryAPI.js"></script>
